--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/QuistBuilder-3/">https://chris-kherk.github.io/QuistBuilder-3/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/QuistBuilder/QuistBuilder-3/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/QuistBuilder/QuistBuilder-3/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/QuistBuilder/QuistBuilder-3/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/QuistBuilder/QuistBuilder-3/index.html</a><br>
+                <a target="_bLank" href="https://frabjous-bubblegum-8738c2.netlify.app">https://frabjous-bubblegum-8738c2.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
